Sun Jun 19 00:48:54 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (ruby_vmptr_destruct): When a VM is about to be destructed,
	  there are already no execution context for that VM.  So
	  rb_objspace_free, which might invoke finalizers, shall not be
	  called here.

	* eval.c (ruby_vm_cleanup): proper cleanup by goto & return idiom.

	* eval.c (vm_finalize_i): There might not always be VM
	  initializations happend.  A VM which was not started has no main
	  thread for instance.

	* vm.c (vm_free): The main VM would call this function to free
	  itself, via rb_objspace_free.  But that should not destruct the
	  main VM, because the VM is just doing that job at that moment.

Sun Jun 19 00:27:26 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* thread.c (vm_set_timer_interrupt): should also check VM state.

Sat Jun 18 23:12:20 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* intervm.c (ruby_vm_join): Now RubyVM#join checks its state
	  rather than its main VM.

	* eval.c (ruby_vm_cleanup): global_vm_waiting shall be signaled.

Sun Jun 12 19:06:23 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* intervm.c (Init_intervm): You cannot free the main VM even when
	  no reference to it remains.

Sun Jun 12 18:54:24 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (InitVM_top_self): This is wrong.  The mark_object_array
	  has already been, and shall be, created in variable.c

Sun Jun 12 18:48:17 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm_core.h (rb_vm_struct): Now the VM struct is reference
	  counted.  A VM gets destructed once after all other VMs are not
	  pointing to it, or when the wholr process passes away.  Note
	  that we do not offer a way to "transfar" a VM to another so
	  there can be no circular references.

	* vm.c: ditto.

Sun Jun 12 17:03:21 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm_core.h (rb_vm_struct): Now the VM struct has its status.
	  Much like the status of thread.  This is (or will be) used to